# otomasyon

./: README.md  cli.py  pyproject.toml
automation/: __init__.py  collector.py  post_processor.py  prompt_builder.py  scheduler.py  video_generator.py
config/: platforms.yml  publishing.yml
examples/: scenario.json
examples/media/: voiceover.txt
samples/: sample_media.csv  sample_output.json  sample_scenario.json
seo/: __init__.py  formatter.py  keywords.py
src/automation/: __main__.py  analytics.py  data_collection.py  editing_export.py  engagement.py  media_production.py  prompt_generation.py  scheduling.py  seo.py  workflow.py
tests/: conftest.py  test_cli.py  test_exporter.py  test_pipeline.py  test_prompt_builder.py  test_workflow.py
