[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-workflow"
version = "0.1.0"
description = "Simulated automation workflow for social media content production"
readme = "README.md"
authors = [{ name = "Automation Team" }]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
